# WinCamStream

./: README.md
.codex/: .codex-global-state.json  auth.json  cap_sid  models_cache.json  state_5.sqlite
.codex/environments/: environment.toml
.codex/rules/: default.rules
.codex/tmp/arg0/codex-arg0MOkaNv/: applypatch.bat
.codex/tmp/path/codex-arg02rNa14/: apply_patch.bat
.codex/tmp/path/codex-arg03v1WA4/: apply_patch.bat
.codex/tmp/path/codex-arg0eJOk9m/: applypatch.bat
.codex/tmp/path/codex-arg0zh8acI/: apply_patch.bat
.codex/vendor_imports/: skills-curated-cache.json
App/: StreamerView.swift
Build_IOS/: WinCamStreamIOS_unsigned_V0.39.ipa  WinCamStreamIOS_unsigned_V0.42.ipa  WinCamStreamIOS_unsigned_V0.44.ipa  WinCamStreamIOS_unsigned_V0.45.ipa
Core/: Streamer.swift  Types.swift
Win/Client/: wcs-client.ps1
Win/ClientDotnet/WcsWinClient/: Form1.Designer.cs  Form1.cs  Program.cs  WcsWinClient.csproj
Win/ClientDotnet/_build_check5/: WcsWinClient.deps.json
Win/Native/: bootstrap_apple_usb.ps1  build_native_all.ps1  build_native_client.ps1  build_native_installer.ps1  build_native_ui.ps1  build_native_vcam.ps1  build_native_winui.ps1  build_native_winui_launcher.ps1
Win/Native/Installer/: WinCamStreamNative.iss
Win/Native/Runtime/: wcs_native_winui.cmd
Win/Native/Runtime/WcsNativeWinUI/: WcsNativeWinUI.exp  WcsNativeWinUI.lib
Win/Native/WcsNativeClient/: CMakeLists.txt
Win/Native/WcsNativeClient/src/: main.cpp
Win/Native/WcsNativeUi/: CMakeLists.txt
Win/Native/WcsNativeUi/src/: main.cpp
Win/Native/WcsNativeVCam/: CMakeLists.txt  README.md
Win/Native/WcsNativeVCam/src/: main.cpp
Win/Native/WcsNativeWinUI/: App.rc  App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Project.idl  WcsNativeWinUI.vcxproj  WcsNativeWinUI.vcxproj.filters  app.manifest  packages.config  pch.h
Win/Native/WcsNativeWinUI/Generated Files/: App.xaml  App.xaml.g.h  App.xaml.g.hpp  MainPage.g.cpp  MainPage.g.h  MainPage.xaml  MainPage.xaml.g.h  MainPage.xaml.g.hpp  MainWindow.g.cpp  MainWindow.g.h  MainWindow.xaml  MainWindow.xaml.g.h  MainWindow.xaml.g.hpp  module.g.cpp  (+10 more)
Win/Native/WcsNativeWinUILauncher/: CMakeLists.txt
Win/Native/WcsNativeWinUILauncher/src/: launcher.rc  main.cpp
Win/VCam/: README.md  wcs_vcam_bridge.py
Win/VCam/UnityCapture/: README.md
docs/: control-protocol.md  windows-client-dotnet.md  windows-client-native.md  windows-client-roadmap.md  windows-client-v1.md
tools/: wcs_control.py
(+162 files in other folders)
